@@ -8,9 +8,28 @@ use Class::Usul::Constants qw( FALSE TRUE );
 use Class::Usul::Functions qw( is_coderef );
 use Class::Usul::Types     qw( ArrayRef CodeRef NonEmptySimpleStr Undef );
 use English                qw( -no_match_vars );
+use POSIX                  qw( WEXITSTATUS );
 use Scalar::Util           qw( weaken );
 
 extends q(Async::IPC::Base);
+
+# Private methods
+my $_watch_child = sub {
+   my ($self, $pid) = @_;
+
+   my $on_exit = sub {
+      my $self = shift; my $pid = shift; my $rv = WEXITSTATUS( shift );
+
+      my $mesg = ucfirst $self->description." stopped rv ${rv}";
+
+      $self->log->info( (log_leader 'info', $self->name, $pid).$mesg );
+
+      return $self->on_exit ? $self->on_exit->( $self, $pid, $rv ) : TRUE;
+   };
+
+   $self->loop->watch_child( $pid, $self->capture_weakself( $on_exit ) );
+   return;
+};
 
 # Public attributes
 has 'code'    => is => 'ro', isa => CodeRef | ArrayRef | NonEmptySimpleStr,
@@ -23,42 +42,44 @@ sub BUILD {
    my $self = shift; $self->autostart and $self->start; return;
 }
 
+sub DEMOLISH {
+   my $self = shift; $self->stop; return;
+}
+
 # Public methods
 sub is_running {
    my $self = shift; return $self->pid ? CORE::kill 0, $self->pid : FALSE;
 }
 
 sub start {
-   my $self = shift; weaken $self; $self->is_running and return;
+   my $self = shift; $self->is_running and return;
    my $code = $self->code;
    my $temp = $self->config->tempdir;
    my $args = { async => TRUE, ignore_zombies => FALSE };
    my $name = $self->config->pathname->abs2rel.' - '.(lc $self->name);
    my $cmd  = (is_coderef $code)
-            ? [ sub { $PROGRAM_NAME = $name; $code->( $self ) } ]
+            ? [ $self->capture_weakself( sub {
+                   $PROGRAM_NAME = $name; $code->( shift ) } ) ]
             : $code;
 
    $self->debug and $args->{err} = $temp->catfile( (lc $self->name).'.err' );
 
    $self->_set_pid( my $pid = $self->run_cmd( $cmd, $args )->pid );
 
-   $self->on_exit and $self->loop->watch_child
-      ( $pid, $self->capture_weakself( $self->on_exit ) );
+   $self->$_watch_child( $pid ); my $mesg = 'Started '.$self->description;
 
-   my $lead = log_leader 'info', $self->name, $pid;
-
-   $self->log->info( "${lead}Started ".$self->description );
-   return;
+   $self->log->info( (log_leader 'info', $self->name, $pid).$mesg );
+   return TRUE;
 }
 
 sub stop {
    my $self = shift; $self->is_running or return;
 
-   my $lead = log_leader 'debug', $self->name, $self->pid;
+   my $mesg = 'Stopping '.$self->description;
 
-   $self->log->debug( "${lead}Stopping ".$self->description );
+   $self->log->debug( (log_leader 'debug', $self->name, $self->pid).$mesg );
    CORE::kill 'TERM', $self->pid;
-   return;
+   return TRUE;
 }
 
 1;
